--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
       <link rel="stylesheet" type="text/css" href="assets/css/main.css">
-      <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+      <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
       <script type="text/javascript" src="assets/scripts/main.js" defer></script>
       <title> Dillon Yun </title>
   </head>
